# CMathgraphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ast.h  buildcmake.bat  compile.bat  main.c  rpn.c  rpn.h  tokenize.c  tokenize.h
src/: main.cpp
src/calc/: ast.c  ast.h  rpn.c  rpn.h  tokenize.c  tokenize.h
src/rendering/: drawgrid.cpp  drawgrid.hpp  renderer.cpp  renderer.h
src/shaders/: basic.frag  grid.frag
src/utils/: calc_elapsed_time.cpp  calc_elapsed_time.hpp  readfile.cpp  readfile.hpp
